--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -49,9 +49,9 @@ jobs:
       postgres:
         image: postgres:10.5
         env:
-          POSTGRES_USER: ${{ env.DB_USER }}
-          POSTGRES_PASSWORD: ${{ env.DB_PASSWORD }}
-          POSTGRES_DB: ${{ env.DB_NAME }}
+          POSTGRES_USER: hibernate_orm_test
+          POSTGRES_PASSWORD: hibernate_orm_test
+          POSTGRES_DB: hibernate_orm_test
         ports:
           - 5432:5432
     steps:
@@ -111,9 +111,9 @@ jobs:
       postgres:
         image: postgres:10.5
         env:
-          POSTGRES_USER: ${{ env.DB_USER }}
-          POSTGRES_PASSWORD: ${{ env.DB_PASSWORD }}
-          POSTGRES_DB: ${{ env.DB_NAME }}
+          POSTGRES_USER: hibernate_orm_test
+          POSTGRES_PASSWORD: hibernate_orm_test
+          POSTGRES_DB: hibernate_orm_test
         ports:
           - 5432:5432
 
@@ -156,9 +156,9 @@ jobs:
       postgres:
         image: postgres:10.5
         env:
-          POSTGRES_USER: ${{ env.DB_USER }}
-          POSTGRES_PASSWORD: ${{ env.DB_PASSWORD }}
-          POSTGRES_DB: ${{ env.DB_NAME }}
+          POSTGRES_USER: hibernate_orm_test
+          POSTGRES_PASSWORD: hibernate_orm_test
+          POSTGRES_DB: hibernate_orm_test
         ports:
           - 5432:5432
 
