Fix for Qute Quickstart in native image
- fixed QuteProcessor
- added integration test
- added UserTagTest

--- a/ci-templates/stages.yml
+++ b/ci-templates/stages.yml
@@ -361,6 +361,7 @@ stages:
             - kogito
             - kubernetes-client
             - quartz
+            - qute
           name: misc_3
 
       - template: native-build-steps.yaml
