--- a/extensions/smallrye-jwt/deployment/src/test/resources/applicationJwtCookie.properties
+++ b/extensions/smallrye-jwt/deployment/src/test/resources/applicationJwtCookie.properties
@@ -3,5 +3,6 @@ mp.jwt.verify.issuer=https://server.example.com
 smallrye.jwt.claims.groups=User
 smallrye.jwt.token.header=Cookie
 smallrye.jwt.token.cookie=a
+smallrye.jwt.sign.key-location=/privateKey.pem
 quarkus.smallrye-jwt.auth-mechanism=MP-JWT
 quarkus.smallrye-jwt.enabled=true
