--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -98,3 +98,8 @@ update_configs:
           dependency_name: "org.mockito:mockito-core"
       - match:
           dependency_name: "org.awaitility:awaitility"
+      # Maven plugins
+      - match:
+          dependency_name: "net.revelc.code.formatter:formatter-maven-plugin"
+      - match:
+          dependency_name: "net.revelc.code:impsort-maven-plugin"
