Add OIDC token grace period, namespace-qualified claim path check, complete redirect support

--- a/integration-tests/oidc-code-flow/src/main/resources/application.properties
+++ b/integration-tests/oidc-code-flow/src/main/resources/application.properties
@@ -1,9 +1,23 @@
 # Configuration file
+
+# Default tenant configuration
 quarkus.oidc.auth-server-url=${keycloak.url}/realms/quarkus
 quarkus.oidc.client-id=quarkus-app
 quarkus.oidc.authentication.scopes=profile,email,phone
 quarkus.oidc.authentication.redirect-path=/web-app
+quarkus.oidc.authentication.extra-params.max-age=60
 quarkus.http.cors=true
 quarkus.oidc.application-type=web-app
+
+# Tenant which does not need to restore a request path after redirect
+quarkus.oidc.tenant-1.auth-server-url=${keycloak.url}/realms/quarkus
+quarkus.oidc.tenant-1.client-id=quarkus-app
+quarkus.oidc.tenant-1.credentials.secret=secret
+quarkus.oidc.tenant-1.token.issuer=${keycloak.url}/realms/quarkus
+quarkus.oidc.tenant-1.authentication.redirect-path=/web-app/callback
+quarkus.oidc.tenant-1.authentication.restore-path-after-redirect=false
+
 quarkus.http.auth.permission.roles1.paths=/index.html
 quarkus.http.auth.permission.roles1.policy=authenticated
+
+#quarkus.log.category."org.apache.http".level=TRACE
