Exclude osgi.annotation.versioning dependency

--- a/build-parent/pom.xml
+++ b/build-parent/pom.xml
@@ -275,6 +275,7 @@
                                             <exclude>org.slf4j:slf4j-jdk14</exclude>
                                             <exclude>org.slf4j:slf4j-log4j12</exclude>
                                             <exclude>org.slf4j:slf4j-log4j13</exclude>
+                                            <exclude>org.osgi:org.osgi.annotation.versioning</exclude>
                                         </excludes>
                                         <includes>
                                             <!-- this is for REST Assured -->
