--- a/independent-projects/qute/rxjava/pom.xml
+++ b/independent-projects/qute/rxjava/pom.xml
@@ -27,6 +27,12 @@
             <groupId>io.smallrye.reactive</groupId>
             <artifactId>smallrye-reactive-streams-operators-1.0</artifactId>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.osgi</groupId>
+                    <artifactId>org.osgi.annotation.versioning</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
