Add first simple version of Jib integration

--- a/bom/deployment/pom.xml
+++ b/bom/deployment/pom.xml
@@ -623,6 +623,11 @@
                 <artifactId>quarkus-vertx-graphql-deployment</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-jib-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
