--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -180,6 +180,8 @@
         <jzlib.version>1.1.1</jzlib.version>
         <checker-qual.version>2.5.2</checker-qual.version>
         <error-prone-annotations.version>2.2.0</error-prone-annotations.version>
+        <jib-core.version>0.13.0</jib-core.version>
+        <google-http-client.version>1.34.0</google-http-client.version>
     </properties>
 
     <dependencyManagement>
@@ -773,6 +775,11 @@
             <dependency>
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-cache</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-jib</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -2682,6 +2689,24 @@
                 <groupId>io.quarkus.qute</groupId>
                 <artifactId>qute-rxjava</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+
+            <!-- Jib -->
+            <dependency>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-core</artifactId>
+                <version>${jib-core.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>com.google.http-client</groupId>
+                <artifactId>google-http-client</artifactId>
+                <version>${google-http-client.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
