--- a/bom/deployment/pom.xml
+++ b/bom/deployment/pom.xml
@@ -323,6 +323,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-mongodb-panache-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-mongodb-client-deployment</artifactId>
                 <version>${project.version}</version>
             </dependency>
