refactor: integrate code review comments
Related to #6192

--- a/integration-tests/spring-data-jpa/src/it/spring-configuration/src/main/resources/application.properties
+++ b/integration-tests/spring-data-jpa/src/it/spring-configuration/src/main/resources/application.properties
@@ -13,4 +13,5 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 
 %prod.quarkus.hibernate-orm.sql-load-script=import.sql
 spring.jpa.show-sql=true
-spring.jpa.data.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.open-in-view=false
