--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -118,6 +118,7 @@
 
         <!-- Integrations -->
         <module>amazon-lambda</module>
+        <module>amazon-lambda-xray</module>
         <module>amazon-lambda-http</module>
         <module>amazon-dynamodb</module>
         <module>azure-functions-http</module>
