Maven create extension test fixes: compare the project files after the resource filtering, escape properties that are not supposed to be replaced during resource filtering

--- a/integration-tests/maven/pom.xml
+++ b/integration-tests/maven/pom.xml
@@ -57,6 +57,13 @@
         </testResources>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <configuration>
+                     <escapeString>\</escapeString>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-platform-descriptor-json-plugin</artifactId>
                 <version>${project.version}</version>
