--- a/integration-tests/maven/src/test/resources/expected/new-extension-project/my-ext/deployment/pom.xml
+++ b/integration-tests/maven/src/test/resources/expected/new-extension-project/my-ext/deployment/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>org.acme</groupId>
             <artifactId>my-ext</artifactId>
-            <version>${project.version}</version>
+            <version>\${project.version}</version>
         </dependency>
     </dependencies>
 
