--- a/integration-tests/maven/src/test/resources/expected/new-extension-project/my-ext/runtime/pom.xml
+++ b/integration-tests/maven/src/test/resources/expected/new-extension-project/my-ext/runtime/pom.xml
@@ -33,7 +33,7 @@
                         </goals>
                         <phase>compile</phase>
                         <configuration>
-                            <deployment>${project.groupId}:${project.artifactId}-deployment:${project.version}
+                            <deployment>\${project.groupId}:\${project.artifactId}-deployment:\${project.version}
                             </deployment>
                         </configuration>
                     </execution>
