Adjust the artifact name of the PDF documentation to avoid conflicts
The final name is not used when pushing to Central and we need a
classifier to avoid conflicts.
The good thing is that we will be able to point the downloads to Central
instead of serving them ourselves.

--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -282,8 +282,8 @@
                                         <descriptor>assembly-pdf.xml</descriptor>
                                     </descriptors>
                                     <recompressZippedFiles>true</recompressZippedFiles>
-                                    <finalName>quarkus-documentation-pdf-${project.version}</finalName>
-                                    <appendAssemblyId>false</appendAssemblyId>
+                                    <finalName>quarkus-documentation-${project.version}</finalName>
+                                    <appendAssemblyId>true</appendAssemblyId>
                                     <outputDirectory>target/</outputDirectory>
                                     <workDirectory>target/assembly-pdf/work</workDirectory>
                                     <tarLongFileMode>gnu</tarLongFileMode>
