--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -119,7 +119,7 @@
         <testng.version>6.14.2</testng.version>
         <assertj.version>3.15.0</assertj.version>
         <json-smart.version>2.3</json-smart.version>
-        <infinispan.version>10.0.0.Final</infinispan.version>
+        <infinispan.version>10.1.2.Final</infinispan.version>
         <infinispan.protostream.version>4.3.1.Final</infinispan.protostream.version>
         <caffeine.version>2.8.0</caffeine.version>
         <netty.version>4.1.44.Final</netty.version>
@@ -2490,7 +2490,11 @@
                 <artifactId>protostream</artifactId>
                 <version>${infinispan.protostream.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.infinispan</groupId>
+                <artifactId>infinispan-component-annotations</artifactId>
+                <version>${infinispan.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.reactivestreams</groupId>
                 <artifactId>reactive-streams</artifactId>
