make ide-config shareable
Why:

 * ide-config currently replicated at `ide-config`, `ip/arc/ide-config` and `ip/qute/ide-config`
 * quickstarts could benefit from reusing quarkus formatting

This change addreses the need by:

 * move ide-config to independent-projects and make it a real project
 * update refs to `eclipse-format.xml` to use <dependency> and resource lookup
 * update CONTRIBUTING.MD
 * enable code formatting and import sorting on tools/bootstrap

--- a/independent-projects/arc/pom.xml
+++ b/independent-projects/arc/pom.xml
@@ -252,8 +252,15 @@
                     <groupId>net.revelc.code.formatter</groupId>
                     <artifactId>formatter-maven-plugin</artifactId>
                     <version>2.11.0</version>
+                    <dependencies>
+                        <dependency>
+                            <artifactId>quarkus-ide-config</artifactId>
+                            <groupId>io.quarkus</groupId>
+                            <version>${project.version}</version>
+                        </dependency>
+                      </dependencies>
                     <configuration>
-                        <configFile>${maven.multiModuleProjectDirectory}/ide-config/eclipse-format.xml</configFile>
+                        <configFile>eclipse-format.xml</configFile>
                         <skip>${format.skip}</skip>
                     </configuration>
                 </plugin>
