--- a/integration-tests/kafka/src/main/resources/application.properties
+++ b/integration-tests/kafka/src/main/resources/application.properties
@@ -4,4 +4,4 @@ quarkus.log.category.\"org.apache.zookeeper\".level=WARN
 
 # enable health check
 quarkus.kafka.health.enabled=true
-quarkus.kafka.bootstrap-servers=localhost:19092
+kafka.bootstrap.servers=localhost:19092
