--- a/integration-tests/oidc-code-flow/src/main/resources/application.properties
+++ b/integration-tests/oidc-code-flow/src/main/resources/application.properties
@@ -10,12 +10,12 @@ quarkus.http.cors=true
 quarkus.oidc.application-type=web-app
 
 # Tenant which does not need to restore a request path after redirect
-quarkus.oidc.tenant-1.auth-server-url=${keycloak.url}/realms/quarkus
-quarkus.oidc.tenant-1.client-id=quarkus-app
-quarkus.oidc.tenant-1.credentials.secret=secret
-quarkus.oidc.tenant-1.token.issuer=${keycloak.url}/realms/quarkus
-quarkus.oidc.tenant-1.authentication.redirect-path=/web-app/callback
-quarkus.oidc.tenant-1.authentication.restore-path-after-redirect=false
+#quarkus.oidc.tenant-1.auth-server-url=${keycloak.url}/realms/quarkus
+#quarkus.oidc.tenant-1.client-id=quarkus-app
+#quarkus.oidc.tenant-1.credentials.secret=secret
+#quarkus.oidc.tenant-1.token.issuer=${keycloak.url}/realms/quarkus
+#quarkus.oidc.tenant-1.authentication.redirect-path=/web-app/callback
+#quarkus.oidc.tenant-1.authentication.restore-path-after-redirect=false
 
 quarkus.http.auth.permission.roles1.paths=/index.html
 quarkus.http.auth.permission.roles1.policy=authenticated
