--- a/independent-projects/tools/pom.xml
+++ b/independent-projects/tools/pom.xml
@@ -250,6 +250,31 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>net.revelc.code.formatter</groupId>
+                <artifactId>formatter-maven-plugin</artifactId>
+                <version>2.11.0</version>
+                <dependencies>
+                    <dependency>
+                        <artifactId>quarkus-ide-config</artifactId>
+                        <groupId>io.quarkus</groupId>
+                        <version>${project.version}</version>
+                    </dependency>
+                  </dependencies>
+                <configuration>
+                    <configFile>eclipse-format.xml</configFile>
+                    <skip>${format.skip}</skip>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>net.revelc.code</groupId>
+                <artifactId>impsort-maven-plugin</artifactId>
+                <version>1.3.2</version>
+                <configuration>
+                    <removeUnused>true</removeUnused>
+                    <skip>${format.skip}</skip>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
