--- a/extensions/smallrye-reactive-messaging/deployment/pom.xml
+++ b/extensions/smallrye-reactive-messaging/deployment/pom.xml
@@ -35,6 +35,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-vertx-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-metrics-spi</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>io.quarkus</groupId>
