Move common container image functionality into base extension

--- a/bom/deployment/pom.xml
+++ b/bom/deployment/pom.xml
@@ -625,6 +625,16 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-container-image-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-container-image-spi</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-jib-deployment</artifactId>
                 <version>${project.version}</version>
             </dependency>
