--- a/extensions/container-image/deployment/pom.xml
+++ b/extensions/container-image/deployment/pom.xml
@@ -3,32 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>quarkus-jib-parent</artifactId>
+        <artifactId>quarkus-container-image-parent</artifactId>
         <groupId>io.quarkus</groupId>
         <version>999-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>quarkus-jib-deployment</artifactId>
-    <name>Quarkus - JIB - Deployment</name>
+    <artifactId>quarkus-container-image-deployment</artifactId>
+    <name>Quarkus - Container Image - Deployment</name>
 
     <dependencies>
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-container-image-deployment</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-jib</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.logging</groupId>
-            <artifactId>commons-logging-jboss-logging</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.cloud.tools</groupId>
-            <artifactId>jib-core</artifactId>
+            <artifactId>quarkus-container-image-spi</artifactId>
         </dependency>
     </dependencies>
 
