--- a/integration-tests/oidc-code-flow/src/main/resources/application.properties
+++ b/integration-tests/oidc-code-flow/src/main/resources/application.properties
@@ -16,6 +16,7 @@ quarkus.oidc.tenant-1.credentials.secret=secret
 quarkus.oidc.tenant-1.token.issuer=${keycloak.url}/realms/quarkus
 quarkus.oidc.tenant-1.authentication.redirect-path=/web-app/callback-after-redirect
 quarkus.oidc.tenant-1.authentication.restore-path-after-redirect=false
+quarkus.oidc.tenant-1.application-type=web-app
 
 quarkus.http.auth.permission.roles1.paths=/index.html
 quarkus.http.auth.permission.roles1.policy=authenticated
