--- a/integration-tests/oidc-tenancy/src/main/resources/application.properties
+++ b/integration-tests/oidc-tenancy/src/main/resources/application.properties
@@ -4,15 +4,24 @@ quarkus.http.cors=true
 quarkus.oidc.auth-server-url=${keycloak.url}/realms/quarkus-a
 quarkus.oidc.client-id=quarkus-app-a
 quarkus.oidc.credentials.secret=secret
+quarkus.oidc.tenant-web-app.application-type=service
 
 # Tenant B
 quarkus.oidc.tenant-b.auth-server-url=${keycloak.url}/realms/quarkus-b
 quarkus.oidc.tenant-b.client-id=quarkus-app-b
 quarkus.oidc.tenant-b.credentials.secret=secret
 quarkus.oidc.tenant-b.token.issuer=${keycloak.url}/realms/quarkus-b
+quarkus.oidc.tenant-web-app.application-type=service
 
 # Tenant C
 quarkus.oidc.tenant-c.auth-server-url=${keycloak.url}/realms/quarkus-c
 quarkus.oidc.tenant-c.client-id=quarkus-app-c
 quarkus.oidc.tenant-c.credentials.secret=secret
 quarkus.oidc.tenant-c.token.audience=${keycloak.url}/realms/quarkus-c
+quarkus.oidc.tenant-web-app.application-type=service
+
+# Tenant Web App
+quarkus.oidc.tenant-web-app.auth-server-url=${keycloak.url}/realms/quarkus-webapp
+quarkus.oidc.tenant-web-app.client-id=quarkus-app-webapp
+quarkus.oidc.tenant-web-app.credentials.secret=secret
+quarkus.oidc.tenant-web-app.application-type=web-app
