Switch the reactive support of the Qute extension from RX to Mutiny

--- a/extensions/qute/runtime/pom.xml
+++ b/extensions/qute/runtime/pom.xml
@@ -29,7 +29,7 @@
         </dependency>
         <dependency>
             <groupId>io.quarkus.qute</groupId>
-            <artifactId>qute-rxjava</artifactId>
+            <artifactId>qute-mutiny</artifactId>
         </dependency>
     </dependencies>
 
