--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -2680,7 +2680,7 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus.qute</groupId>
-                <artifactId>qute-rxjava</artifactId>
+                <artifactId>qute-mutiny</artifactId>
                 <version>${project.version}</version>
             </dependency>
         </dependencies>
