Introduce jib extension as an alternative for building container images and harmonize code between it and the docker extension

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -130,7 +130,7 @@
         <module>scala</module>
 
         <!-- Kubernetes -->
-        <module>container</module>
+        <module>container-image</module>
         <module>kubernetes</module>
         <module>kubernetes-client</module>
 
