--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -1,5 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -69,7 +67,8 @@
         <module>amazon-lambda-http</module>
         <module>amazon-lambda-http-resteasy</module>
         <module>kogito</module>
-        <module>container</module>
+        <module>kogito-maven</module>
+        <module>container-image</module>
         <module>optaplanner-jackson</module>
         <module>kubernetes</module>
         <module>kubernetes-client</module>
