--- a/bom/deployment/pom.xml
+++ b/bom/deployment/pom.xml
@@ -473,12 +473,22 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
-                <artifactId>quarkus-container-deployment</artifactId>
+                <artifactId>quarkus-container-image-deployment</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
-                <artifactId>quarkus-container-spi</artifactId>
+                <artifactId>quarkus-container-image-spi</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-container-image-docker-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-container-image-jib-deployment</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
